[gd_scene load_steps=42 format=3 uid="uid://dyla7u85dyr44"]

[ext_resource type="PackedScene" uid="uid://dsr0i1ygm5cch" path="res://src/entity/mob/mob.tscn" id="1_lgjo0"]
[ext_resource type="Texture2D" uid="uid://cfw7hfxtr0fom" path="res://res/sprites/entity/skelet/Skeleton_01_White_Attack1.png" id="2_o8pn2"]
[ext_resource type="Script" uid="uid://cn7dg8kbr3jh4" path="res://src/entity/skelet/skelet.gd" id="2_pvfm3"]
[ext_resource type="Texture2D" uid="uid://22pf3duvrmsh" path="res://res/sprites/entity/skelet/Skeleton_01_White_Die.png" id="3_pvfm3"]
[ext_resource type="Texture2D" uid="uid://cpov30yh6civq" path="res://res/sprites/entity/skelet/Skeleton_01_White_Walk.png" id="4_2hk36"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ohj2g"]
atlas = ExtResource("2_o8pn2")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jms2r"]
atlas = ExtResource("2_o8pn2")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vguu6"]
atlas = ExtResource("2_o8pn2")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ob1d8"]
atlas = ExtResource("2_o8pn2")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_34tos"]
atlas = ExtResource("2_o8pn2")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uenbf"]
atlas = ExtResource("2_o8pn2")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_104vk"]
atlas = ExtResource("2_o8pn2")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dok0"]
atlas = ExtResource("2_o8pn2")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fbamb"]
atlas = ExtResource("2_o8pn2")
region = Rect2(768, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qr6pm"]
atlas = ExtResource("2_o8pn2")
region = Rect2(864, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0781"]
atlas = ExtResource("3_pvfm3")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4f82q"]
atlas = ExtResource("3_pvfm3")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bu2qk"]
atlas = ExtResource("3_pvfm3")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2lxk"]
atlas = ExtResource("3_pvfm3")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qg0wk"]
atlas = ExtResource("3_pvfm3")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpbc1"]
atlas = ExtResource("3_pvfm3")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lri88"]
atlas = ExtResource("3_pvfm3")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cq6s7"]
atlas = ExtResource("3_pvfm3")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q14p2"]
atlas = ExtResource("3_pvfm3")
region = Rect2(768, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4syw"]
atlas = ExtResource("3_pvfm3")
region = Rect2(864, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tr2kk"]
atlas = ExtResource("3_pvfm3")
region = Rect2(960, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6pca"]
atlas = ExtResource("3_pvfm3")
region = Rect2(1056, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8wrbe"]
atlas = ExtResource("3_pvfm3")
region = Rect2(1152, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ib1tw"]
atlas = ExtResource("4_2hk36")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_33ed1"]
atlas = ExtResource("4_2hk36")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mm8se"]
atlas = ExtResource("4_2hk36")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lerkg"]
atlas = ExtResource("4_2hk36")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nfqgo"]
atlas = ExtResource("4_2hk36")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5lx3"]
atlas = ExtResource("4_2hk36")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjb3p"]
atlas = ExtResource("4_2hk36")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lguhp"]
atlas = ExtResource("4_2hk36")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_myiu4"]
atlas = ExtResource("4_2hk36")
region = Rect2(768, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xh44y"]
atlas = ExtResource("4_2hk36")
region = Rect2(864, 0, 96, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_3rdn3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohj2g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jms2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vguu6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ob1d8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34tos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uenbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_104vk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dok0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fbamb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qr6pm")
}],
"loop": false,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0781")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4f82q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bu2qk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2lxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qg0wk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpbc1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lri88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cq6s7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q14p2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4syw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tr2kk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6pca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wrbe")
}],
"loop": false,
"name": &"die",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ib1tw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33ed1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mm8se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lerkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nfqgo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5lx3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjb3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lguhp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_myiu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xh44y")
}],
"loop": true,
"name": &"walking",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kvmxr"]
radius = 4.0
height = 25.0

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_lgjo0"]
polygon = PackedVector2Array(4, 13, 0, 12, -4, 13)

[node name="Mob" instance=ExtResource("1_lgjo0")]
script = ExtResource("2_pvfm3")
speed = 70.0
jump_velocity = -350.0
max_health = 2.0
damage = 1.0

[node name="AnimatedSprite2D" parent="." index="0"]
position = Vector2(2, -4)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_3rdn3")
animation = &"die"
autoplay = "walking"
offset = Vector2(-3, 0)

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource("CapsuleShape2D_kvmxr")

[node name="LightOccluder2D" parent="." index="2"]
occluder = SubResource("OccluderPolygon2D_lgjo0")

[node name="RayCast2D" type="RayCast2D" parent="." index="3"]
position = Vector2(8, -12)
target_position = Vector2(0, 23)
hit_from_inside = true

[node name="Timers" type="Node" parent="." index="4"]

[node name="AttackDelay" type="Timer" parent="Timers" index="0"]
wait_time = 0.3
one_shot = true

[node name="JumpDelay" type="Timer" parent="Timers" index="1"]
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="Timers/AttackDelay" to="." method="_on_attack_delay_timeout"]
[connection signal="timeout" from="Timers/JumpDelay" to="." method="_on_jump_delay_timeout"]
